--- a/src/components/StartModal/StartModal.scss
+++ b/src/components/StartModal/StartModal.scss
@@ -4,12 +4,14 @@
   height: 100vh;
   width: 100vw;
   z-index: -1000;
-  display: flex;
+  // display: flex;
   justify-content: center;
   align-items: center;
+  display: none;
 
   &.active {
     z-index: 100;
+    display: flex;
   }
 
   .introduction {
